# amplitude-tracker-ios

./: AmplitudeWrapper.h  CMakeLists.txt  main.cpp
ios/: AmplitudeBridge.h  AmplitudeBridge.mm
